header spacing solved

--- a/css/largescreen.css
+++ b/css/largescreen.css
@@ -11,109 +11,131 @@
 /******************************Header*************************************************/
 /**************************************************************************************/
 
-/*************** Top Header *****************/ 
-    .top-header-container{
-        width:67.368421%;
-        background-color:black;
-        margin:0 auto;
-        padding-top: 1.2%;
-        padding-bottom: 1.3%;
-        overflow: hidden;
-    }
 
-    /*************left top***********************/
-    .main-logo img{
-        padding-left: 0%;
-    }
-    /*************right top***********************/
-   
-   
-    .right-topcontain{
-        width: 100%;
-        overflow: hidden;
-        text-align: right;
-       }
+.header-wrapper{
+    width:100%;
+}
 
-    .search-option{
-        display: block;
-    }
-    .right-top-header ul{
-        list-style: none;
-        color:grey;
-        font-size: small;
-        overflow: hidden;
-    }
-    .right-top-header li{
-        float: right; 
-        padding-left: 5%;
-    } 
-    .right-top-header li a{
-        display: block;
-        color: grey;
-        text-decoration: none;
-    }
-    li a:hover {
-        color: blanchedalmond;
-      }
+.top-header-wrapper{
+    width: 100%;
+}
+.top-header-container{
+    width:75%;
+    background-color:black;
+    margin:0 auto;
+    padding-top: 1.2%;
+    padding-bottom: 1.3%;
+    overflow: hidden;
+}
 
-    /*************** Bottom Header *****************/
+/*************left top***********************/
+.main-logo img{
+    padding-left: 0%;
+}
+/*************right top***********************/
 
-    .button-header-container{
-        width:67.368421%;
-        margin:0 auto;
-        padding-top: 1.2%;
-        padding-bottom: 1.3%;
-        overflow: hidden;
-    }
 
-    .hamicon{
-        display: none;
-    }
+.right-topcontain{
+    width: 100%;
+    overflow: hidden;
+    text-align: right;
+   }
 
-    .bheader-nav{
-        display: block;
-        padding-top: 0%;
-    }
-
-    .bheader-nav ul{
-        list-style-type: none;
-    }
-    .bheader-nav li{
-        float: left;
-        padding-top: 5%;
-        padding-bottom: 5%; 
-        padding-left: 5%;
-    }
-
+.search-option{
+    display: block;
+}
+.right-top-header ul{
+    list-style: none;
+    color:grey;
+    font-size: small;
+    overflow: hidden;
+}
+.right-top-header li{
+    float: right; 
+    padding-left: 5%;
+} 
+.right-top-header li a{
+    display: block;
+    color: grey;
+    text-decoration: none;
     
-    .bheader-nav li:first-child{
-        padding-left: 0;
-    }
-    .bheader-nav li a{
-        display: block;
-        text-decoration: none;
-        color:black;
-    }
-    .bheader-nav li a:hover{
-        color:#57c5a0;
-    }
+}
+li a:hover {
+    color: blanchedalmond;
+  }
 
-    .bh-right ul{
-        list-style-type: none;
-        padding-top: 5%;
-       
-    }
-    .bh-right li{
-        float: right;
-        padding-left: 5%;
-    }
-    .bh-right li:first-child{
-        padding-right: 0%;
-    }
-    .bh-right li a{
-        display: block;
-        text-decoration: none;
-    }
+/*************** Bottom Header *****************/
+
+
+.button-header-container{
+    width:75%;
+    margin:0 auto;
+    overflow: hidden;
+}
+
+.hamicon{
+    display: none;
+}
+
+.bheader-nav{
+    display: block;
+    padding-top: 0%;
+    overflow: hidden;
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.bheader-nav ul{
+    list-style-type: none;
+   
+}
+.bheader-nav li{
+    float: left;
+    padding-left: 5%;
+}
+
+
+.bheader-nav li:first-child{
+    padding-left: 0;
+}
+.bheader-nav li a{
+    display: block;
+    text-decoration: none;
+    color:black;
+}
+.bheader-nav li a:hover{
+    color:#57c5a0;
+}
+
+
+.bh-right ul{
+    list-style-type: none;
+    padding-top: 0%;
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.bh-right li{
+    float: right;
+    padding-left: 3%;
+}
+
+.bh-right li a{
+    display: block;
+    text-decoration: none;
+   
+}
+
+.bh-right li:first-child{
+    padding-right: 0%;
+}
+
+.bh-right ul li img{
+    max-width: 100%;
+}
+
+
+
     
     
     /**************************************************************************************/
